--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-# Documentation:  http://docs.travis-ci.com/user/languages/julia/
 language: julia
 os:
   - linux
@@ -6,6 +5,18 @@ os:
 julia:
   - 0.6
   - nightly
+notifications:
+  email: false
+before_install:
+  - cd ..
+  - git clone https://github.com/LaGuer/MathPhysicalConstants.jl.jl.git MathPhysicalConstants.jl
+  - cd MathPhysicalConstants.jl
+  - if [ ${TRAVIS_OS_NAME} == "osx" ]; then brew update >/dev/null 2>&1; fi
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("MathPhysicalConstants")'
+  - julia -e 'Pkg.test("MathPhysicalConstants"; coverage=true)'
+after_success:
 #matrix:
 #  allow_failures:
 #- julia_version: latest
