--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+# Documentation:  http://docs.travis-ci.com/user/languages/julia/
 language: julia
 os:
   - linux
@@ -5,18 +6,6 @@ os:
 julia:
   - 0.6
   - nightly
-notifications:
-  email: false
-before_install:
-  - cd ..
-  - git clone https://github.com/LaGuer/MathPhysicalConstants.jl.git
-  - cd MathPhysicalConstants.jl
-  - if [ ${TRAVIS_OS_NAME} == "osx" ]; then brew update >/dev/null 2>&1; fi
-script:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("MathPhysicalConstants")'
-  - julia -e 'Pkg.test("MathPhysicalConstants"; coverage=true)'
-after_success:
 #matrix:
 #  allow_failures:
 #- julia_version: latest
@@ -28,5 +17,5 @@ notifications:
 #script: # the default script is equivalent to the following
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 #  - julia -e 'Pkg.clone(pwd()); Pkg.build("Example"); Pkg.test("Example"; coverage=true)';
-after_success:
-  - julia -e 'cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
+#after_success:
+#  - julia -e 'cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
