--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,15 @@ git:
   depth: 999999
 notifications:
   email: false
-#script: # the default script is equivalent to the following
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("Example"); Pkg.test("Example"; coverage=true)';
+before_install:
+#  - cd ..
+  - pwd
+  - git clone https://github.com/LaGuer/MathPhysicalConstants.jl.git
+#  - cd IJulia.jl
+  - if [ ${TRAVIS_OS_NAME} == "osx" ]; then brew update >/dev/null 2>&1; fi
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("MathPhysicalConstants")'
+  - julia -e 'Pkg.test("MathPhysicalConstants"; coverage=true)'
 #after_success:
 #  - julia -e 'cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
