--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,15 @@ notifications:
 before_install:
   - cd ..
   - export JL_PKG=MathPhysicalConstants
-  - ls
-  - cd MathPhysicalConstants.jl
+#  - ls
+#  - cd MathPhysicalConstants.jl
 #  - git clone https://github.com/LaGuer/MathPhysicalConstants.jl.git MathPhysicalConstants.jl
-  - pwd
+#  - pwd
   - if [ ${TRAVIS_OS_NAME} == "osx" ]; then brew update >/dev/null 2>&1; fi
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone("https://github.com/LaGuer/MathPhysicalConstants.jl"); Pkg.build("MathPhysicalConstants")'
-  - julia -e 'Pkg.test("MathPhysicalConstants"; coverage=true)'
+#  - julia -e 'Pkg.clone("https://github.com/LaGuer/MathPhysicalConstants.jl"); Pkg.build("MathPhysicalConstants")'
+  - julia -e 'Pkg.build("MathPhysicalConstants")'
+  - julia -e 'Pkg.test("MathPhysicalConstants"; coverage=false)'
 #after_success:
 #  - julia -e 'cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
