--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,5 @@ script:
 #  - julia -e 'Pkg.clone("https://github.com/LaGuer/MathPhysicalConstants.jl"); Pkg.build("MathPhysicalConstants")'
 #  - julia -e 'Pkg.build("MathPhysicalConstants")'
 #  - julia -e 'Pkg.test("MathPhysicalConstants"; coverage=false)'
-#after_success:
-#  - julia -e 'cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
+after_success:
+  - julia -e 'cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
