--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ julia:
 matrix:
   allowed_failures:
     - julia: nightly
-    - julia: 1.0
+#    - julia: 1.0
 # Work around a Travis bug
 git:
   depth: 999999
