--- a/Project.toml
+++ b/Project.toml
@@ -7,12 +7,15 @@ author = "La Guer"
 license = "MIT"
 version = "v0.0.5"
 
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
+
 #[deps]
 #Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 #Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
-
-#[targets]
-#test = ["Test"]
 
 [compat]
 Julia = ">= v0.6"
