--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,8 +30,15 @@ install:
   - ps: iex ((new-object net.webclient).DownloadString("https://raw.githubusercontent.com/JuliaCI/Appveyor.jl/version-1/bin/install.ps1"))
 
 build_script:
-  - echo "%JL_BUILD_SCRIPT%"
-  - C:\julia\bin\julia -e "%JL_BUILD_SCRIPT%"
+#  - echo "%JL_BUILD_SCRIPT%"
+#  - C:\julia\bin\julia -e "%JL_BUILD_SCRIPT%"
+  - C:\julia\bin\julia -e "using InteractiveUtils; versioninfo();
+    using UUIDs;
+    before = read(\"Project.toml\", String);
+    after = replace(before, \"uuid = \\\"44cfe95a-1eb2-52ea-b672-e2afdf69b78f\\\"\" =>
+                            \"uuid = \\\"4d836010-47a6-11e8-12b2-0918962bae33\\\"\");
+    write(\"Project.toml\", after);
+    import Pkg; Pkg.build()"
 
 test_script:
   - echo "%JL_TEST_SCRIPT%"
