--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,8 +30,8 @@ install:
   - ps: iex ((new-object net.webclient).DownloadString("https://raw.githubusercontent.com/JuliaCI/Appveyor.jl/version-1/bin/install.ps1"))
 
 build_script:
-#  - echo "%JL_BUILD_SCRIPT%"
-#  - C:\julia\bin\julia -e "%JL_BUILD_SCRIPT%"
+  - echo "%JL_BUILD_SCRIPT%"
+  - C:\julia\bin\julia -e "%JL_BUILD_SCRIPT%"
   - C:\julia\bin\julia -e "using InteractiveUtils; versioninfo();
     using UUIDs;
     before = read(\"Project.toml\", String);
