--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ os:
 julia:
   - 0.7
   - 1.0
+  - 1.1
   - nightly
 matrix:
   allowed_failures:
@@ -23,7 +24,7 @@ sudo: false
 env:
   matrix:
     - JULIA_MathPhysicalConstants_BUILD_SOURCE=true
-    - JULIA_MathPhysicalConstants_BUILD_SOURCE=false
+#    - JULIA_MathPhysicalConstants_BUILD_SOURCE=false
 before_install:
   - cd ..
   - export JL_PKG=MathPhysicalConstants
@@ -41,3 +42,13 @@ after_success:
   - echo $TRAVIS_JULIA_VERSION
   - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder()); Codecov.submit(process_folder())'
   - julia -e 'cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
+jobs:
+  include:
+    - stage: "Documentation"
+      julia: 1.0
+      os: linux
+      script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.instantiate();
+                                    Pkg.develop(PackageSpec(path=pwd()))'
+        - julia --project=docs/ docs/make.jl
+      after_success: skip
