--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,8 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 [targets]
 test = ["Test"]
 
-#[deps]
+[deps]
+Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 #Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 #Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
