--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ jobs:
       julia: 1.0
       os: linux
       script:
-        - julia --project=docs/ -e 'using Pkg; Pkg.build(PackageSpec(\"${JL_PKG}\"()))'
+        - julia --project=docs/ -e 'using Pkg; Pkg.build(\"${JL_PKG}\")'
         - julia --project=docs/ -e 'using Pkg; Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
       after_success: skip
