--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ jobs:
       julia: 1.0
       os: linux
       script:
+        - julia --color=yes -e "VERSION >= v\"0.7.0-DEV.5183\" && using Pkg; Pkg.clone(pwd()); Pkg.build(\"${JL_PKG}\")"'
         - julia --project=docs/ -e 'using Pkg; Pkg.build(\"${JL_PKG}\")'
         - julia --project=docs/ -e 'using Pkg; Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
