--- a/.travis.yml
+++ b/.travis.yml
@@ -52,5 +52,6 @@ jobs:
         - julia --color=yes -e 'using Pkg; Pkg.build()'
         - julia --check-bounds=yes --color=yes -e 'using Pkg; Pkg.test(coverage=true)'
         - julia --project=@ -e 'using Pkg; Pkg.instantiate()'
+        - julia --project=@ -e 'import Pkg; Pkg.add("Documenter")'
         - julia --project=@ docs/make.jl
       after_success: skip
