--- a/.travis.yml
+++ b/.travis.yml
@@ -50,8 +50,9 @@ jobs:
       os: linux
       script:
         - julia --color=yes -e 'using Pkg; Pkg.build()'
-        - julia --check-bounds=yes --color=yes -e 'using Pkg; Pkg.test(coverage=true)'
+#        - julia --check-bounds=yes --color=yes -e 'using Pkg; Pkg.test(coverage=true)'
         - julia --project=@ -e 'using Pkg; Pkg.instantiate()'
         - julia --project=@ -e 'import Pkg; Pkg.add("Documenter")'
+        - julia --project=@ -e 'import Pkg; Pkg.add("MathPhysicalConstants")'
         - julia --project=@ docs/make.jl
       after_success: skip
