--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,7 @@ jobs:
         - julia --project=@ -e 'using Pkg; Pkg.instantiate()'
         - julia --project=@ -e 'import Pkg; Pkg.add("Documenter")'
         - julia --project=@ -e 'import Pkg; Pkg.add("Measurements")'
+        - julia --project=@ -e 'import Pkg; Pkg.add("Unitful")'
         - julia --project=@ -e 'import Pkg; Pkg.add("MathPhysicalConstants")'
         - julia --project=@ docs/make.jl
 #        - julia --project=docs/ docs/make.jl
