--- a/.travis.yml
+++ b/.travis.yml
@@ -61,3 +61,4 @@ jobs:
 #        - julia --project=docs/ docs/make.jl
       after_success:
         - julia -e 'import Pkg; cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
+        - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
