--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,8 @@
 environment:
   matrix:
-  - julia_version: 0.7
-  - julia_version: 1
-  - julia_version: nightly
+#  - julia_version: 0.7
+  - julia_version: 1.1
+#  - julia_version: nightly
 
 platform:
   - x86 # 32-bit
@@ -12,7 +12,7 @@ platform:
 # # (tests will run but not make your overall status red)
 matrix:
   allow_failures:
-    - julia_version: nightly
+    - julia_version: 1.1
 
 branches:
   only:
@@ -46,7 +46,7 @@ test_script:
   
 after_test:
   - C:\julia\bin\julia -e "using Pkg; Pkg.add(\"Coverage\"); using Coverage; Codecov.submit(process_folder())"
-
+  - C:\julia\bin\julia -e "import Pkg; cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
 # # Uncomment to support code coverage upload. Should only be enabled for packages
 # # which would have coverage gaps without running on Windows
 # on_success:
