--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,16 @@
 language: julia
 os:
   - linux
-  - osx
+#  - osx
 julia:
   - 0.7
 #  - 1.0
 #  - 1.1
 #  - 1.2
-  - nightly
+#  - nightly
 matrix:
   allowed_failures:
-    - julia: nightly
+    - julia: 0.7
 #    - julia: 1.0
 # Work around a Travis bug
 git:
@@ -43,7 +43,6 @@ script:
 #  - julia -e 'Pkg.test("MathPhysicalConstants"; coverage=false)'
 after_success:
   - echo $TRAVIS_JULIA_VERSION
-  - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder()); Codecov.submit(process_folder())'
 #  - julia -e 'cd(Pkg.dir("MathPhysicalConstants")); ps=Pkg.PackageSpec(name="Documenter", version="0.21"); Pkg.add(ps); Pkg.pin(ps); include(joinpath("docs", "make.jl"))'
 #  - julia -e 'cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   - julia -e 'import Pkg; Pkg.clone("https://github.com/LaGuer/MathPhysicalConstants.jl"); ps=Pkg.PackageSpec(name="Documenter", version="0.21"); Pkg.add(ps); Pkg.pin(ps); include(joinpath("docs", "make.jl"))'
@@ -59,20 +58,22 @@ jobs:
       codecov: true
       os: linux
       script:
-        - julia --color=yes -e 'using Pkg; Pkg.build()'
-#        - julia --check-bounds=yes --color=yes -e 'using Pkg; Pkg.test(coverage=true)'
-        - julia --project=@ -e 'using Pkg; Pkg.instantiate()'
         - julia --project=@ -e 'import Pkg; Pkg.add("Documenter")'
         - julia --project=@ -e 'import Pkg; Pkg.add("Measurements")'
         - julia --project=@ -e 'import Pkg; Pkg.add("Unitful")'
         - julia --project=@ -e 'import Pkg; Pkg.add("MathPhysicalConstants")'
+        - julia --project=@ --color=yes -e 'using Pkg; Pkg.build()'
+        - julia --project=@ -e 'import Pkg; Pkg.status()'
+        - julia --project=@ -e 'import Pkg; Pkg.build()'
+        - julia --project=@ -e 'using Pkg; Pkg.instantiate()'
         - julia --project=@ docs/make.jl
 #        - julia --project=docs/ docs/make.jl
       after_success:
         - julia -e 'import Pkg; Pkg.add("Measurements")'
         - julia -e 'import Pkg; Pkg.add("Unitful")'
         - julia -e 'using Pkg; Pkg.instantiate()'
+        - julia --check-bounds=yes --color=yes -e 'using Pkg; Pkg.test(coverage=true)'
         - julia --code-coverage test/runtests.jl
         - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
-        - julia -e 'import Pkg; cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
+        - julia -e 'import Pkg; cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
         - julia -e 'import Pkg; cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
