--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 # Documentation:  http://docs.travis-ci.com/user/languages/julia/
 language: julia
+codecov: true
 os:
   - linux
-  - osx
+#  - osx
 julia:
-  - 0.7
+#  - 0.7
 #  - 1.0
   - 1.1
 #  - 1.2
@@ -69,14 +70,15 @@ jobs:
         - julia --project=@ docs/make.jl
 
       after_success:
+        - julia --project=@ -e 'import Pkg; Pkg.add("Documenter")'
         - julia -e 'import Pkg; Pkg.add("Measurements")'
         - julia -e 'import Pkg; Pkg.add("Unitful")'
         - julia -e 'using Pkg; Pkg.instantiate()'
         - julia --check-bounds=yes --color=yes -e 'using Pkg; Pkg.test(coverage=true)'
         - julia --code-coverage test/runtests.jl
-        - julia --project=@ docs/ -e 'using Pkg; Pkg.instantiate();
-                                    Pkg.develop(PackageSpec(path=pwd()))'
-        - julia --project=@ docs/ docs/make.jl
+  #      - julia --project=@ docs/ -e 'using Pkg; Pkg.instantiate();
+  #                                  Pkg.develop(PackageSpec(path=pwd()))'
+  #      - julia --project=@ docs/ docs/make.jl
         - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
         - julia -e 'import Pkg; cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
         - julia -e 'import Pkg; cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
