--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ platform:
 # # (tests will run but not make your overall status red)
 matrix:
   allow_failures:
-    - julia_version: 1.1
+    - julia_version: nightly
 
 branches:
   only:
@@ -50,7 +50,7 @@ after_test:
 #  - C:\julia\bin\julia -e "import Pkg; cd(Pkg.dir("MathPhysicalConstants")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())";
 #  - C:\julia\bin\julia -e "using Pkg; Pkg.add(\"Coverage\"); using Coverage; Codecov.submit(process_folder())"
 #  - C:\julia\bin\julia -e "using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder()); Codecov.submit(process_folder())"
-  - C:\julia\bin\julia -e "using Pkg; Pkg.add(\"Coverage\"); using Coverage; Codecov.submit(process_folder())"
+  - C:\julia\bin\julia -e "using Pkg; Pkg.add(\"Coverage\"); using Coverage; Codecov.submit(process_folder()); Coveralls.submit(process_folder())"
 # # Uncomment to support code coverage upload. Should only be enabled for packages
 # # which would have coverage gaps without running on Windows
 # on_success:
