--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ test = ["Test"]
 
 [deps]
 Calculus = "49dc2e85-a5d0-5ad3-a950-438e2897f1b9"
-Cuba = "8a292aeb-7a57-582c-b821-06e4c11590b1"
+# Cuba = "8a292aeb-7a57-582c-b821-06e4c11590b1"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
@@ -24,4 +24,4 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-Julia = ">= v0.6"
+Julia = ">= v0.7"
